--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/supabase-js": "^2.81.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
